--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,28 +8,36 @@
         "./*": "./src/*.tsx"
     },
     "scripts": {
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "peerDependencies": {
+        "next": "^16",
         "react": "^19",
-        "react-dom": "^19",
-        "next": "^16"
+        "react-dom": "^19"
     },
     "dependencies": {
-        "framer-motion": "^12.23.24",
         "animejs": "^3.2.2",
-        "lucide-react": "^0.554.0",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.23.24",
+        "lucide-react": "^0.554.0",
         "tailwind-merge": "^3.4.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
-        "typescript": "^5",
-        "@types/node": "^20",
+        "@geekslab/config": "*",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
         "@types/animejs": "^3.1.4",
-        "tailwindcss": "^4.0.0",
+        "@types/node": "^20",
+        "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.0.0",
+        "jsdom": "^27.2.0",
         "postcss": "^8.0.0",
-        "@geekslab/config": "*"
+        "tailwindcss": "^4.0.0",
+        "typescript": "^5",
+        "vitest": "^4.0.13"
     }
 }
