Fix: Simplify CI workflows, remove Vercel deploy (auto-deployed)

--- a/.github/workflows/main-hub.yml
+++ b/.github/workflows/main-hub.yml
@@ -10,23 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
+          cache: 'npm'
+      
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+      
       - name: Build
-        run: npx turbo run build --filter=@geekslab/main-hub
-      - name: Lint
-        run: npx turbo run lint --filter=@geekslab/main-hub
-      - name: Deploy to Vercel
-        if: github.ref == 'refs/heads/main'
-        run: npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx turbo build --filter=@geekslab/main-hub
         env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_MAIN_HUB_ID }}
-      - name: Run Lighthouse CI (Placeholder)
-        if: github.ref == 'refs/heads/main'
-        run: echo "Lighthouse CI will be configured here"
+          SKIP_ENV_VALIDATION: true
+      
+      - name: Lint
+        run: npx turbo lint --filter=@geekslab/main-hub
