--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,11 @@
             ]
         },
         "lint": {},
+        "test": {
+            "dependsOn": [
+                "^test"
+            ]
+        },
         "dev": {
             "cache": false,
             "persistent": true
